view state and repo implementation was created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MovieDBApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="movie_photo">Movie Photo</string>
+    <string name="movie_title">Movie Title</string>
+    <string name="description">Description</string>
+    <string name="realease">Realease</string>
 </resources>
