fragments and activity edited

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="movie_title">Movie Title</string>
     <string name="description">Description</string>
     <string name="realease">Realease</string>
+    <string name="imdb_logo">Imdb Logo</string>
+    <string name="fav_logo">Fav Logo</string>
+    <string name="vote">Vote</string>
+    <string name="navigate_to_detail">Navigate to Detail</string>
 </resources>
